testing/tests/ui/macro.stderr
error: macro "thrice" expected 1 argument, found 2
 --> InvalidNumberOfArgs.html:5:2
       "- call thrice(2, 3) -%}"
 --> tests/ui/macro.rs:4:12
  |
4 | #[template(source = "{%- macro thrice(param) -%}
  |            ^^^^^^

error: macro "thrice" expected 2 arguments, found 0
 --> InvalidNumberOfArgs2.html:5:2
       "- call thrice() -%}"
  --> tests/ui/macro.rs:12:12
   |
12 | #[template(source = "{%- macro thrice(param, param2) -%}
   |            ^^^^^^

error: macro "thrice" expected 0 arguments, found 2
 --> InvalidNumberOfArgs3.html:4:2
       "- call thrice(1, 2) -%}"
  --> tests/ui/macro.rs:20:12
   |
20 | #[template(source = "{%- macro thrice() -%}
   |            ^^^^^^
